--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: When the FocusWidget has focus
   Trigger the PointerDown event outside the FocusWidget area
   Will make FocusWidget lose focus
   and trigger the FocusNode listener
-version: 1.0.1
+version: 1.0.1+1
 homepage: https://github.com/gzlock/flutter_focus_widget
 
 environment:
