--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,7 +1,7 @@
 name: focus_widget_demo
 description: A demo for the focus widget.
 
-version: 1.0.0+1
+version: 1.0.2
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
