--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,16 +1,17 @@
-name: focus_widget_demo
-description: A demo for the focus widget.
+name: focuswidget_demo
+description: A demo for the FocusWidget.
 
 version: 1.0.2
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^0.1.3
+
   focus_widget:
     path: ../
   flutter_localizations:
@@ -20,5 +21,4 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 flutter:
-
   uses-material-design: true
