--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,6 @@
 name: focus_widget
-description: When the FocusWidget has focus
-  Trigger the PointerDown event outside the FocusWidget area
-  Will make FocusWidget lose focus
-  and trigger the FocusNode listener
-version: 1.0.2+2
+description: When tap outside of the TextField, let the TextField lose focus.
+version: 1.0.4+1
 homepage: https://github.com/gzlock/flutter_focus_widget
 
 environment:
