--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,6 @@
 name: focuswidget_demo
 description: A demo for the FocusWidget.
+publish_to: none
 
 version: 1.0.2
 
@@ -11,6 +12,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.3
+  oktoast: any
 
   focus_widget:
     path: ../
