--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: focus_widget
 description: When tap outside of the TextField, let the TextField lose focus.
-version: 1.0.5
+version: 1.0.5+1
 homepage: https://github.com/gzlock/flutter_focus_widget
 
 environment:
